<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">自定义悬浮通知</string>
    <string name="about">关于</string>
    <string name="about_build_time">编译日期</string>
    <string name="about_developer">开发者</string>
    <string name="about_version">版本</string>
    <string name="action_get">获取</string>
    <string name="action_search">搜索</string>
    <string name="action_selectall">全选</string>
    <string name="action_delete">删除</string>
    <string name="bottom_naa_main">主页</string>
    <string name="dialog_cancel_btn">取消</string>
    <string name="dialog_close_btn">关闭</string>
    <string name="dialog_ok_btn">确定</string>
    <string name="dialog_donate_btn">捐赠</string>
    <string name="dialog_donation_list_btn">捐赠列表</string>
    <string name="dialog_donation_title">请作者喝咖啡</string>
    <string name="dialog_donation_text">这款应用只是兴趣使然，如果你喜欢这款应用，不妨支持一下作者。</string>
    <string name="intro_done_btn">完成</string>
    <string name="intro_skip_btn">跳过</string>
    <string name="first_infomation">在使用应用之前，你需要了解一些内容。应用分为默认模式和磁贴模式，可以在“测试”中体验两种模式。</string>
    <string name="first_intro_floating">默认模式会在屏幕内显示一段时间。点击悬浮通知即可响应事件，下滑删除。</string>
    <string name="first_intro_tile">磁贴模式会常驻屏幕。点击展开或缩小，长按响应事件，下滑删除。</string>
    <string name="first_intro_setting">全局设置由两种模式共享；默认模式设置与磁贴模式设置只影响对应模式。</string>
    <string name="first_key_information">规则格式：title: 关键词、content: 关键词、or: 关键词、and: 关键词。冒号后需要一个空格。</string>
    <string name="perf_main_floating_settings_category">悬浮设置</string>
    <string name="perf_main_global_title">全局设置</string>
    <string name="perf_main_floating_title">默认设置</string>
    <string name="perf_main_tile_title">磁贴设置</string>
    <string name="perf_main_test_category">测试</string>
    <string name="perf_main_sendfloating_title">发送一条默认悬浮</string>
    <string name="perf_main_sendtile_title">发送一条磁贴悬浮</string>
    <string name="perf_global_func_category">功能</string>
    <string name="perf_global_splash_title">权限引导</string>
    <string name="perf_global_keypre_title">关键词屏蔽</string>
    <string name="perf_global_keypre_summary">符合规则的通知不显示悬浮通知</string>
    <string name="perf_global_blacklist_title">黑名单应用</string>
    <string name="perf_global_manager_title">通知管理</string>
    <string name="perf_global_manager_summary">查看历史通知记录</string>
    <string name="other_get_source">获取应用源代码</string>
    <string name="other_update_title">检测更新</string>
    <string name="other_get_beta">获取应用内测版本</string>
    <string name="splash_permission_title_nlistener">通知使用权</string>
    <string name="splash_permission_introduc_nlistener">用于第一时间拦截并转换通知。</string>
    <string name="splash_permission_title_showwindow">悬浮窗权限</string>
    <string name="splash_permission_introduc_showwindow">用于在屏幕上显示悬浮通知。</string>
    <string name="splash_permission_title_3">忽略电池优化（建议）</string>
    <string name="splash_permission_introduc_3">降低服务被系统终止的概率。</string>
    <string name="splash_permission_title_4">无障碍服务（可选）</string>
    <string name="splash_permission_introduc_4">用于兼容模式。</string>
</resources>
