<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="18.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="25.0dp" android:text="应用需要以下权限，当您全部设置完必选项后即可自动跳转主页面。" />
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="21.0sp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/splash_permission_title_nlistener" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/splash_permission_introduc_nlistener" />
            <Button android:theme="@style/PrimaryButton" android:id="@+id/splash_getnotifica_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_get" />
            <TextView android:textSize="21.0sp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dp" android:text="@string/splash_permission_title_showwindow" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/splash_permission_introduc_showwindow" />
            <Button android:theme="@style/PrimaryButton" android:id="@+id/splash_getfloating_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_get" />
            <TextView android:textSize="21.0sp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dp" android:text="@string/splash_permission_title_3" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/splash_permission_introduc_3" />
            <Button android:theme="@style/PrimaryButton" android:id="@+id/splash_battery_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="忽略" />
            <TextView android:textSize="21.0sp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dp" android:text="@string/splash_permission_title_4" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:text="@string/splash_permission_introduc_4" />
            <Button android:theme="@style/PrimaryButton" android:id="@+id/splash_accessibility_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_get" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
